--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,12 @@
 \documentclass[oneside]{book}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{graphicx}
 \usepackage[utf8]{inputenc}
-\usepackage{CJKutf8}
 \usepackage[margin=1.5in]{geometry}
+\usepackage{CJKutf8}
 \title{\Huge Hua Mulan}
-\author{Henry Yang}
+\author{By \\ XiaoMing 小明}
 \date{}
 \makeatletter
 \def\newsect{%
@@ -14,7 +17,9 @@
 }
 \makeatother%
 \begin{document}
-	\maketitle
-	\tableofcontents
-	\input{chapters/chapter1}
+	\begin{CJK}{UTF8}{gbsn}
+		\maketitle
+		\tableofcontents
+		\input{chapters/chapter1}
+	\end{CJK}
 \end{document}
